--- a/app.json
+++ b/app.json
@@ -1,12 +1,14 @@
 {
   "pages": [
-    "pages/login/login",
+    "pages/login1/login1",
+    "pages/login2/login2",
+    "pages/login3/login3",
     "pages/index/index",
     "pages/list/list",
     "pages/cate/cate",
     "pages/inter/inter",
     "pages/wode/wode",
-    "pages/setting/setting"
+    "pages/set/set"
   ],
   "window": {
     "navigationBarBackgroundColor":"#808080",
