--- a/project.config.json
+++ b/project.config.json
@@ -1,11 +1,5 @@
 {
-  "appid": "wx59cd23045d6f8070",
   "compileType": "miniprogram",
-  "libVersion": "3.3.5",
-  "packOptions": {
-    "ignore": [],
-    "include": []
-  },
   "setting": {
     "coverView": true,
     "es6": true,
@@ -18,11 +12,18 @@
       "ignore": [],
       "disablePlugins": [],
       "outputPath": ""
-    }
+    },
+    "ignoreUploadUnusedFiles": true
   },
   "condition": {},
   "editorSetting": {
     "tabIndent": "insertSpaces",
     "tabSize": 2
-  }
+  },
+  "libVersion": "3.3.5",
+  "packOptions": {
+    "ignore": [],
+    "include": []
+  },
+  "appid": "wx59cd23045d6f8070"
 }
